--- a/Spon-Us/Info.plist
+++ b/Spon-Us/Info.plist
@@ -4,9 +4,9 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>SUIT-Light.otf</string>
 		<string>SUIT-Regular.otf</string>
-		<string>SUIT-SemiBold.otf</string>
+		<string>SUIT-Medium.otf</string>
+		<string>SUIT-Bold.otf</string>
 	</array>
 </dict>
 </plist>
